viewer/versions/1.0.0/CHANGELOG.md
# Changelog
All notable changes to this project will be documented in this file.

## [1.0.0] - 2018-09-10
### Added
- URL Hash to easily share [Issue #8](https://github.com/GRIDgva/SwissDataCube/issues/8) 
- Time-slider to visualize time-enabled maps; activated following the type of products published [Issue #6](https://github.com/GRIDgva/SwissDataCube/issues/6)
- Opacity slider [Issue #4](https://github.com/GRIDgva/SwissDataCube/issues/4)
- maxBounds to restrict the view on Switzerland [Issue #3](https://github.com/GRIDgva/SwissDataCube/issues/3)
- Zoom to default extent
- Full screen mode
- About section
- Data Download through WCS requests
- Help section
- Mouse Position
- Scale Bar
- Webservices; relevant links for Discovery (CSW, OpenSearch EO); View (WMS, WMTS, TMS, WMS-C); Download (WCS, WFS) services
- Basic print module [Issue #9](https://github.com/GRIDgva/SwissDataCube/issues/9) 
- Query (with mouse pointer) a pixel and get a pop with time-series values & graph [Issue #5](https://github.com/GRIDgva/SwissDataCube/issues/5)
- Initial implementation of a config file [Issue #7](https://github.com/GRIDgva/SwissDataCube/issues/7)
- Snow Cover and Mosaic products
- Help section

### Changed
- N/A.


### Removed
- N/A.
