viewer/versions/1.3.0/CHANGELOG.md
# Changelog
All notable changes to this project will be documented in this file.

## [1.3.0] - 2019-09-20
### Added
- New layer: Atlas of Changing Switzerland
- GetFeatureInfo functionality: used for describing the Atlas sites
- Sync maps functionality: used in the Atlas
- Swipe maps functionality: used in the Atlas
- New function: copy to clipboard URL. [Issue #14](https://github.com/GRIDgva/SwissDataCube/issues/14)

### Changed
- Bug correction: Snow Map Layer 1995/2005 details open when loading layer 2005/2017 (wrong ID reference)

### Removed
- N/A.

## [1.1.1] - 2018-09-25
### Added
- N/A.

### Changed
- Ensure that border layers are always on top. [Issue #12](https://github.com/GRIDgva/SwissDataCube/issues/12)
- updated Leaflet to version 1.0.2

### Removed
- N/A.

## [1.1.0] - 2018-09-21
### Added
- N/A.

### Changed
- Enhanced metadata visualization. [Issue #10](https://github.com/GRIDgva/SwissDataCube/issues/10)

### Removed
- Removed mention of Storymaps in Features.

## [1.0.0] - 2018-09-10
### Added
- URL Hash to easily share [Issue #8](https://github.com/GRIDgva/SwissDataCube/issues/8) 
- Time-slider to visualize time-enabled maps; activated following the type of products published [Issue #6](https://github.com/GRIDgva/SwissDataCube/issues/6)
- Opacity slider [Issue #4](https://github.com/GRIDgva/SwissDataCube/issues/4)
- maxBounds to restrict the view on Switzerland [Issue #3](https://github.com/GRIDgva/SwissDataCube/issues/3)
- Zoom to default extent
- Full screen mode
- About section
- Data Download through WCS requests
- Help section
- Mouse Position
- Scale Bar
- Webservices; relevant links for Discovery (CSW, OpenSearch EO); View (WMS, WMTS, TMS, WMS-C); Download (WCS, WFS) services
- Basic print module [Issue #9](https://github.com/GRIDgva/SwissDataCube/issues/9) 
- Query (with mouse pointer) a pixel and get a pop with time-series values & graph [Issue #5](https://github.com/GRIDgva/SwissDataCube/issues/5)
- Initial implementation of a config file [Issue #7](https://github.com/GRIDgva/SwissDataCube/issues/7)
- Snow Cover and Mosaic products
- Help section

### Changed
- N/A.


### Removed
- N/A.
